--- a/src/style.css
+++ b/src/style.css
@@ -240,7 +240,7 @@ section button i {
 option {
     cursor: pointer;
 }
-#container-animes ,#animeFiltrado{
+#container-animes ,#animeFiltrado ,#root{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 20px;
