--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,6 @@ html {
 }
 body {
     font-family: arial, helvetica;
-   
 }
 .nav {
     background-color: #00283A;
@@ -18,7 +17,6 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
 }
 .logo img {
     height: 15vh;
@@ -54,13 +52,29 @@ body {
 ul.show {
     top: 65px;
 }
-input[type=search] {
+input[type=text] {
     border: 1px solid gray;
     border-radius: 8px;
-    width: 37%;
+    width: 30%;
     padding: 10px;
     font-size: 1rem;
     cursor: pointer;
+}
+input[type="text"]:focus {
+    border: 2px solid orange;
+    border-radius: 8px;
+    outline: none;
+}
+.button {
+    border: 1px solid #00283A;
+    border-radius: 8px;
+    background-color: #00283A;
+    padding: 10px;
+    margin-left: 5px;
+    font-weight: bold;
+    font-size: 1rem;
+    color: white;
+
 }
 .search  {
     display: flex;
@@ -182,6 +196,8 @@ section button i {
     width: 100%;
     height: 100vh;
     position: relative;
+    display: flex;
+    align-items: center
 
 }
 .welcome-main::before {
@@ -191,6 +207,12 @@ section button i {
     background-color: black;
     position: absolute;
     opacity: 0.5;
+}
+.welcome-main h1 {
+    position: relative;
+    color: white;
+    display: flex;
+    align-items: center;
 }
 .text {
     position: relative;
@@ -277,23 +299,4 @@ footer {
     text-align: center;
     font-size: 16px;
     font-weight: bold;
-}
-
-@media (max-width: 767px) {
-    .logo img {
-        width: 160px;
-        height: 60px;
-    }
-    .nav {
-        height: 90px;
-    }
-    .btn-menu {
-        display: inline-flex;
-    }
-    .nav-menu {
-        position: fixed;
-        width: 100vw;
-        text-align: center;
-        flex-direction: column;
-    }
 }
