--- a/src/media.css
+++ b/src/media.css
@@ -1,8 +1,13 @@
-@media (max-width: 767px) {
+@media screen and (max-width:952px) {
     .logo img {
         width: 160px;
         height: 60px;
     }
+    .nav-menu li a {
+        font-size: 16px;
+    }
+}
+@media (max-width: 767px) {
     .nav {
         height: 90px;
     }
@@ -12,7 +17,35 @@
     .nav-menu {
         position: fixed;
         width: 100vw;
+        height: calc(100% - 90px);
+        background: #414141;
+        top: -100vh;
         text-align: center;
+        transition: all .4s;
         flex-direction: column;
+    }
+    .nav-menu li {
+        margin: 30px 0 0 0;
+        line-height: 30px;
+    }
+    .nav-menu li:hover {
+        background: none;
+    }
+    .nav-menu li a {
+        font-size: 20px;
+        color: white;
+        font-weight: bold;
+    }
+    .nav-menu li a:hover{
+        background: red;
+    }
+}
+@media screen and (max-width: 756px) and (orientation: landscape) {
+    .nav-menu li {
+        margin: 5px 0 0 0;
+    }
+    .nav-menu {
+        overflow: scroll;
+        height: calc(100% - 90px)
     }
 }
