agregue animacion fondo celeste

--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,9 @@ html {
 }
 body {
     font-family: arial, helvetica;
+   background-color:#D6E8EB; 
+   /* background-color: #FBFBFF;*/
+    
 }
 .nav {
     background-color: #00283A;
