--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,7 @@ input[type="text"]:focus {
 }
 
 
-.detallePelicula .imagenPelicula{
+.detallePelicula .imagenPelicula .tituloPelicula{
     height: 50vh;
     width: 50vw;
     border: 2px solid #00283A;
