--- a/src/style.css
+++ b/src/style.css
@@ -93,19 +93,24 @@ input[type="text"]:focus {
     display: block;
 }
 
-.detallePelicula{
-    height: 90vh;;
-    width: 95vw;
-    margin: 1%;
-    border: 2px solid #00283A ;
-    display: flex;
+
+
+.modalDialog > section {
+    max-width: 90%;
+    width: 90%;
+    position: relative;
+    margin: 4% auto;
+    padding: 20px;
+    border-radius: 3px;
+    background: #fff;
+    display:flex;
 }
 
 
 .detallePelicula .imagenPelicula .tituloPelicula{
-    height: 50vh;
-    width: 50vw;
-    border: 2px solid #00283A;
+    height: 80vh;
+    width: 80vw;
+    border: 1px solid #00283A;
     margin:  50px 20px  auto ;
 }
 
@@ -125,8 +130,8 @@ input[type="text"]:focus {
 
 
 .director, .fecha ,.producer ,.rtScore {
-    height: 10vh;
-    width: 10vw;
+    height: 20vh;
+    width: 20vw;
     background-color: violet;
     margin: 20px 30px;
     padding: 30px;
@@ -135,13 +140,11 @@ input[type="text"]:focus {
     text-align: center;
 }
 
-#d1 {
-    background-color:#FBFBFF;
-}
 
 .iconosPeliculas {
     display: flex;
     justify-content: center;
+
 }
 
 #botonCharacters ,#botonLocation,#botonVehicles {
