--- a/src/style.css
+++ b/src/style.css
@@ -9,9 +9,9 @@ html {
 }
 body {
     font-family: arial, helvetica;
-   background-color:#D6E8EB; 
-   /* background-color: #FBFBFF;*/
-    
+    background-color:#D6E8EB;
+    /* background-color: #FBFBFF;*/
+
 }
 .nav {
     background-color: #00283A;
@@ -267,17 +267,46 @@ section button i {
 option {
     cursor: pointer;
 }
-#container-animes ,#animeFiltrado ,#root{
+.container-personajes {
+    position: relative;
+    z-index: 0;
+    transition: 0.2s all
+}
+#container-animes,
+#container-personajes,
+#animeFiltrado,
+#root {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 20px;
 }
-#image-poster {
+.image-poster {
     width: 15vw;
     display: block;
     margin: auto;
 }
-#title {
+.image-personajes {
+    width: 14em;
+    height: 14em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.descripciones {
+    background-color: #DFD8EC;
+    color: black;
+    font-size: 1rem;
+    padding: 5px;
+    width: 14em;
+    display: block;
+    margin: auto;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-bottom: 15%;
+}
+.title {
     background-color: #232323;
     color: white;
     font-size: 1rem;
@@ -286,7 +315,7 @@ option {
     display: block;
     margin: auto;
 }
-#release {
+.release {
     background-color: #232323;
     color: white;
     display: block;
