--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,21 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 html {
     width: 100%;
     min-height: 100vh;
 }
+
 body {
     font-family: arial, helvetica;
    background-color:#D6E8EB; 
-   /* background-color: #FBFBFF;*/
     
 }
+
+
 .nav {
     background-color: #00283A;
     height: 100px;
@@ -91,19 +94,6 @@ input[type="text"]:focus {
 }
 .mensaje-correcto {
     display: block;
-}
-
-
-
-.modalDialog > section {
-    max-width: 90%;
-    width: 90%;
-    position: relative;
-    margin: 4% auto;
-    padding: 20px;
-    border-radius: 3px;
-    background: #fff;
-    display:flex;
 }
 
 
@@ -308,3 +298,72 @@ footer {
     font-size: 16px;
     font-weight: bold;
 }
+
+
+
+/* mostrador de detalles */
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  .modalDialog {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 100ms ease-in;
+    -moz-transition: opacity 100ms ease-in;
+    transition: opacity 100ms ease-in;
+    pointer-events: none;
+  }
+  .modalDialog:target {
+    opacity:1;
+    pointer-events: auto;
+  }
+  .modalDialog > section {
+    max-width: 800px;
+    width: 90%;
+    position: relative;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 3px;
+    background: #fff;
+  }
+  .close {
+    font-family: Arial, Helvetica, sans-serif;
+    background: #f26d7d;
+    color: #fff;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 34px;
+    height: 34px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
+    padding-top: 5px;
+  }
+  .close:hover {
+    background: #fa3f6f;
+  }
