--- a/src/media.css
+++ b/src/media.css
@@ -1,10 +1,15 @@
-@media screen and (max-width:952px) {
+@media (min-width: 1200px) {
     .logo img {
         width: 160px;
         height: 60px;
     }
     .nav-menu li a {
         font-size: 16px;
+    }
+    .container-filter-characters, .container-characters {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 @media (max-width: 767px) {
@@ -40,12 +45,11 @@
         background: red;
     }
 }
-@media screen and (max-width: 756px) and (orientation: landscape) {
-    .nav-menu li {
-        margin: 5px 0 0 0;
-    }
-    .nav-menu {
-        overflow: scroll;
-        height: calc(100% - 90px)
+@media (min-width: 540px){
+    .container-filter-characters {
+        flex-flow: row wrap;
+        align-items: center
+    }.container-filter-characters > * {
+        margin: 0.5rem 0.5rem 0.5rem 0rem;
     }
 }
