--- a/src/media.css
+++ b/src/media.css
@@ -1,55 +1,81 @@
 @media (min-width: 1200px) {
     .logo img {
-        width: 160px;
-        height: 60px;
+        max-width: 100%;
+        height: 70px;
+        padding-left: 50px;
     }
-    .nav-menu li a {
-        font-size: 16px;
+    .navlist {
+        padding-right: 50px;
     }
-    .container-filter-characters, .container-characters {
+    .nav-link {
+        font-size: 20px;
+        color: white;
+        font-size: 18px;
+    }
+    .container-filter-characters,
+    .container-characters,
+    .menuBar {
         max-width: 1200px;
         margin-left: auto;
         margin-right: auto;
     }
 }
 @media (max-width: 767px) {
+    .logo img {
+        max-width: 100%;
+        height: 70px;
+        padding: 0;
+    }
     .nav {
-        height: 90px;
+        flex-direction: row;
+        justify-content: space-evenly;
     }
     .btn-menu {
         display: inline-flex;
     }
     .nav-menu {
-        position: fixed;
+        position: absolute;
         width: 100vw;
-        height: calc(100% - 90px);
-        background: #414141;
+        height: 100vh;
+        background-color: rgba(16, 14, 29, 1);
         top: -100vh;
         text-align: center;
-        transition: all .4s;
         flex-direction: column;
+        padding: 0px;
     }
-    .nav-menu li {
-        margin: 30px 0 0 0;
-        line-height: 30px;
+    .nav-list {
+        line-height: 50px;
+        padding: 0px;
     }
-    .nav-menu li:hover {
-        background: none;
-    }
-    .nav-menu li a {
+    .nav-link {
         font-size: 20px;
         color: white;
-        font-weight: bold;
-    }
-    .nav-menu li a:hover{
-        background: red;
     }
 }
 @media (min-width: 540px){
-    .container-filter-characters {
+    .container-filter-characters,
+    .menuBar {
         flex-flow: row wrap;
         align-items: center
-    }.container-filter-characters > * {
+    }.container-filter-characters > *,
+    .menuBar > * {
         margin: 0.5rem 0.5rem 0.5rem 0rem;
     }
 }
+@media (max-width: 479px) {
+    .image {
+        display: flex;
+        justify-content: center;
+    }
+    .containerModal {
+    flex-flow: column wrap;
+    }
+    .tabs {
+        grid-template-columns: 1fr;
+    }
+}
+/* @media (min-width: 480px) and (max-width: 1200px) {
+    .containerModal {
+    flex-flow: column wrap;
+    }
+} */
