--- a/src/media.css
+++ b/src/media.css
@@ -52,7 +52,7 @@
         color: white;
     }
 }
-@media (min-width: 540px){
+@media (min-width: 540px) {
     .container-filter-characters,
     .menuBar {
         flex-flow: row wrap;
@@ -62,7 +62,7 @@
         margin: 0.5rem 0.5rem 0.5rem 0rem;
     }
 }
-@media (max-width: 479px) {
+@media (max-width: 559px) {
     .image {
         display: flex;
         justify-content: center;
@@ -74,8 +74,8 @@
         grid-template-columns: 1fr;
     }
 }
-/* @media (min-width: 480px) and (max-width: 1200px) {
-    .containerModal {
-    flex-flow: column wrap;
+@media (min-width: 560px) {
+    .modalDetails {
+        padding-left: 1.5em;
     }
-} */
+}
